(0.10) Fix path to application.conf, reinclude StdDev focal benches

--- a/geotrellis-0.10/src/test/resources/application.conf
+++ b/geotrellis-0.10/src/test/resources/application.conf
@@ -1,5 +1,5 @@
-scaliper.application.name="GeoTrellis 0.10.0"
+scaliper.application.name="GeoTrellis 0.10.1"
 scaliper.report.endpoint.url="http://localhost:8050/saverun"
 scaliper.report.endpoint.failIfError=false
 
-geotrellis.catalog = "geotrellis010/src/test/resources/catalog.json"
+geotrellis.catalog = "geotrellis-0.10/src/test/resources/catalog.json"
